services/kubecost/0.26.0/kubecost.yaml
---
# TODO(mh): See `../defaults/cm.yaml` section of
# `cost-analyzer.grafana.ingress`. This is a fix for grafana chart bundled
# by kubecost installing Ingress with version that is not supported in k8s 1.22+
# anymore.
# This should be removed once the upstream chart is fixed and enabled in default
# CM configuration.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-grafana
  namespace: ${releaseNamespace}
  annotations:
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.middlewares: ${workspaceNamespace}-stripprefixes@kubernetescrd,${workspaceNamespace}-forwardauth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /dkp/kubecost/grafana
            pathType: Prefix
            backend:
              service:
                name: kubecost-grafana
                port:
                  number: 80
